@@ -1,9 +1,13 @@
 package de.tudresden.inf.st.bigraphs.simulation.matching;
 
 import de.tudresden.inf.st.bigraphs.core.Bigraph;
+import de.tudresden.inf.st.bigraphs.core.reactivesystem.BigraphMatch;
 import de.tudresden.inf.st.bigraphs.core.Signature;
 import de.tudresden.inf.st.bigraphs.core.impl.pure.PureBigraph;
+import de.tudresden.inf.st.bigraphs.core.reactivesystem.ReactionRule;
 import de.tudresden.inf.st.bigraphs.simulation.matching.pure.PureBigraphMatcher;
+
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * This class is responsible for executing bigraph matching. A bigraph matcher consists of a bigraph
@@ -25,6 +29,7 @@ import de.tudresden.inf.st.bigraphs.simulation.matching.pure.PureBigraphMatcher;
 public abstract class AbstractBigraphMatcher<B extends Bigraph<? extends Signature<?>>> {
     protected B agent;
     protected B redex;
+    protected ReactionRule<B> rule;
 //    private Class<B> matcherClassType;
 
     //    @SuppressWarnings("unchecked")
@@ -37,15 +42,15 @@ public abstract class AbstractBigraphMatcher<B extends Bigraph<? extends Signatu
     public static <B extends Bigraph<? extends Signature<?>>> AbstractBigraphMatcher<B> create(Class<B> bigraphClass) {
         if (bigraphClass == PureBigraph.class) {
             try {
-                return (AbstractBigraphMatcher<B>) Class.forName(PureBigraphMatcher.class.getCanonicalName()).newInstance();
-            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+                return (AbstractBigraphMatcher<B>) Class.forName(PureBigraphMatcher.class.getCanonicalName()).getConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
                 throw new RuntimeException(e);
             }
         }
         throw new RuntimeException("Not Implemented Yet");
     }
 
-    public abstract <M extends BigraphMatch<B>> MatchIterable<M> match(B agent, B redex);
+    public abstract <M extends BigraphMatch<B>> MatchIterable<M> match(B agent, ReactionRule<B> rule);
 
     /**
      * Provide the matching engine for the specific bigraph type implemented by the sub class
@@ -55,7 +60,7 @@ public abstract class AbstractBigraphMatcher<B extends Bigraph<? extends Signatu
     protected abstract BigraphMatchingEngine<B> instantiateEngine();
 
     /**
-     * Returns the supplied agent passed via the {@link AbstractBigraphMatcher#match(Bigraph, Bigraph)} method.
+     * Returns the supplied agent passed via the {@link AbstractBigraphMatcher#match(Bigraph, ReactionRule)} method.
      *
      * @return the agent for the match
      */
@@ -64,7 +69,7 @@ public abstract class AbstractBigraphMatcher<B extends Bigraph<? extends Signatu
     }
 
     /**
-     * Returns the supplied redex passed via the {@link AbstractBigraphMatcher#match(Bigraph, Bigraph)} method.
+     * Returns the supplied redex passed via the {@link AbstractBigraphMatcher#match(Bigraph, ReactionRule)} method.
      *
      * @return the redex for the match
      */
